@@ -8,6 +8,7 @@ Permitir al driver SDL usar una paleta de color de 8 bits
 Permitir al driver SDL forzar el tamaño de la ventana
 Permitir variable de entorno DESTDIR en el paso make install
 Permitir acelerar carga de diskette, microdrive, etc
+Agregada opción de configuración para autoactivar chip AY en modelos de Spectrum sin chip ay
 
 Mejorado ZX Vision:
 - Agregado nuevo Menú Superior (no habilitado por defecto)
