@@ -211,6 +211,7 @@ extern int scr_sdl_force_size_width;
 extern int scr_sdl_force_size_height;
 
 extern z80_bit storage_accelerate_loading;
+extern z80_bit storage_accelerate_saving;
 
 #endif
 
